--- a/my_personal_css.css
+++ b/my_personal_css.css
@@ -21,7 +21,7 @@
 
 .login {
 
-	margin-left: 15px;	
+	margin-left: 15px;
 
 }
 
@@ -61,4 +61,139 @@
 	padding-top: 100px;
 	font-size: 100px!important;
 	font-family: 'Dosis', sans-serif;
+}
+
+/*=====================================Inizio form registrazione====================================*/
+
+
+/* basic stylings ------------------------------------------ */
+
+.my_container {
+
+	padding-top: 50px;
+	padding-left: 4.7em;
+	font-family: 'Raleway', sans-serif;
+
+}
+
+
+.form {
+
+}
+
+.container      {
+
+  width:500px!important;
+  margin:30px auto 0;
+  display:block;
+  background:#FFF;
+	margin-top: 10em;
+  padding:10px 50px 50px;
+	border: 3px solid;
+	border-radius: 30px;
+}
+h2       {
+  text-align:center;
+  margin-bottom:50px;
+}
+h2 small {
+  font-weight:normal;
+  color:#888;
+  display:block;
+}
+.footer     { text-align:center; }
+.footer a  { color:#53B2C8; }
+
+/* form starting stylings ------------------------------- */
+.group            {
+  position:relative;
+  margin-bottom:45px;
+}
+input               {
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
+}
+
+input:focus         { outline:none; }
+
+/* LABEL ======================================= */
+label                {
+  color:#999;
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label        {
+  top:-20px;
+  font-size:14px;
+  color:#343a40;
+}
+
+/* BOTTOM BARS ================================= */
+.bar    { position:relative; display:block; width:300px; }
+.bar:before, .bar:after     {
+  content:'';
+  height:2px;
+  width:0;
+  bottom:1px;
+  position:absolute;
+  background:#343a40;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%;
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%;
+  width:100px;
+  top:25%;
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+    from { background:#343a40; }
+  to    { width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+    from { background:#343a40; }
+  to    { width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+    from { background:#343a40; }
+  to    { width:0; background:transparent; }
 }
